--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ingenia-landing",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://ingenia.com",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
+    "axios": "^1.6.8",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
